<resources>
    <string name="app_name">FriendReminder</string>
    <string name="dev_key">AIzaSyDP2sfM-IkVJy_ksC-Sr3V-LEM6YLlkZJE</string>
    <string name="dev_key2">AIzaSyC1O99_tQxjrQ2uRJpv8CduyCulPZEaFTA</string>
    <string name="proj_numb">114694038794</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="h_unlogged_btn_signin">Sign In</string>
    <string name="h_unlogged_btn_signup">Sign Up</string>
    <string name="list_default_category">all</string>
    <string name="signin_lo">all</string>


    <string name="email_hint">your.email@email.com</string>
    <string name="password_hint">password</string>
    <string name="username_hint">your name</string>
    <string name="repeat_pass_hint">repeat password</string>

    <string name="signin_button_submit">Sign in</string>
    <string name="signup_submit">Register</string>
    <string name="list_category_preheader">Category :&#160;</string>
    <string name="date_picker_label">Choose date</string>
    <string name="time_picker_label">Choose time</string>
    <string name="details_date_pick_button">pick</string>
    <string name="details_create_category">New</string>
    <string name="category_dialog_submit">Create</string>
    <string name="details_text">reminder text...</string>
    <string name="alarm_notification_title">FriendReminder alarm</string>
    <string name="friend_reminder_send">Send</string>
    <string name="choose_date_and_time">Choose date and time</string>
    <string name="update_reminder_button">Update</string>
    <string name="list_category_delete_button">category delete button</string>
    <string name="dialog_delete_category_message">All reminders also will be deleted</string>
    <string name="dialog_delete_category_title">Delete category</string>
    <string name="dialog_delete_category_btn_positive">Delete</string>
    <string name="dialog_delete_category_btn_negative">Cancel</string>
    <string name="reminder_swipe_item_delete_button">reminder swipe item delete button</string>
    <string name="reminder_swipe_item_edit_button">reminder swipe item edit button</string>
    <string name="log_out_pref">log_out_pref</string>
    <string name="pref_sync">sync</string>
</resources>
