<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_marginTop="50dp"
android:id="@+id/rel_signup"
style="@style/SignRelativeLayout"
android:padding="10dp"
android:paddingTop="15dp"
    >

<android.support.design.widget.TextInputLayout
    style="@style/SupportInput"
    android:id="@+id/signup_email_supp">
    <EditText
        android:id="@+id/signup_email"
        style="@style/TextInput.EmailInput"
        />
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    style="@style/SupportInput"
    android:id="@+id/signup_username_supp"
    android:layout_below="@id/signup_email_supp">
    <EditText
        android:id="@+id/signup_username"
        style="@style/TextInput"
        android:hint="@string/username_hint"
        />
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    style="@style/SupportInput"
    android:id="@+id/signup_password_supp"
    android:layout_below="@id/signup_username_supp" >
    <EditText
        android:id="@+id/signup_password"
        style="@style/TextInput.PasswordInput"
        android:hint="@string/password_hint"/>
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    style="@style/SupportInput"
    android:id="@+id/signup_repeat_password_supp"
    android:layout_below="@id/signup_password_supp">
    <EditText
        android:id="@+id/signup_repeat_password"
        style="@style/TextInput.PasswordInput"
        android:hint="@string/repeat_pass_hint" />
</android.support.design.widget.TextInputLayout>

<Button
    style="@style/SignSubmit"
    android:id="@+id/signup_submit"
    android:text="@string/signup_submit"
    android:layout_below="@id/signup_repeat_password_supp"
    android:layout_alignEnd="@id/signup_repeat_password_supp"
    android:layout_alignRight="@id/signup_repeat_password_supp"

    />

</RelativeLayout>