<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
   android:layout_marginBottom="75dp">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signin_bar"
        android:layout_marginTop="170dp"
        android:layout_centerHorizontal="true" />
    <RelativeLayout
        android:layout_marginTop="150dp"
        android:id="@+id/rel_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="@dimen/sign_inputs_width"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:id="@+id/signin_email"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            />
        <EditText
            android:layout_width="@dimen/sign_inputs_width"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/signin_password"
            android:layout_below="@id/signin_email"
            android:hint="@string/password_hint"/>

    </RelativeLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_button_submit"
            android:id="@+id/signin_submit"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/rel_signin"/>
</RelativeLayout>